[package]
name = "layer1"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"

# New security dependencies (adding just 3 for now)
uuid = { version = "1.0", features = ["v4"] }           # For unique transaction IDs                                         # For secure random numbers
hex = "0.4"      